--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,8 @@
     <div class="main">
       <a href="#boom">Ready?💣</a>
     </div>
-    <div class="box">
-      <div id="boom">💥💥💥Boom💥💥💥</div>
+    <div id="box">
+      <div class="boom">💥💥💥Boom💥💥💥</div>
     </div>
   </body>
 </html>
