--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
       <a href="#boom">Ready?💣</a>
     </div>
     <div class="box">
-      <div id="boom">💥💥💥Boom💥💥💥</div>
+      <div class="boom" id="boom">💥💥💥Boom💥💥💥</div>     
     </div>
   </body>
 </html>
